--- a/cruise.html
+++ b/cruise.html
@@ -4,9 +4,14 @@
 <head>
     <title> WORKING ON CRUISE</title>
 </head>
+<style>
+    body{
+        background-color: blanchedalmond;
+    }
+</style>
 
 <body>
-    <h1> goes on a cruise</h1>
+    <h1 style="color: blue; font-family: 'Courier New', Courier, monospace;"> Sumanth goes on a cruise</h1>
     <form>
         <label for="shares-cabin">
             <input type="checkbox" id="cabin" value="True"> Shares Cabin
@@ -25,11 +30,11 @@
     </form><br> <br>
     <form>
         <label for="day">Enter the number of days </label>
-        <input type ="text" id="day">
+        <input type="text" id="day">
         <br><br>
 
         <label for="price">Enter price </label>
-        <input type ="text" id="price">
+        <input type="text" id="price">
         <br><br>
         <input class="btn btn-success" type="button" onclick="updateCruise()" value="Update the Cruise">
     </form>
@@ -47,16 +52,16 @@
             my_cruise.pool = document.getElementById("pool").checked;
             document.getElementById("result").innerHTML = JSON.stringify(my_cruise);
         }
-        function updateCruise(){
-            my_cruise={};
-        const day = document.getElementById("day").value;
-        const price = document.getElementById("price").value;
+        function updateCruise() {
+            my_cruise = {};
+            const day = document.getElementById("day").value;
+            const price = document.getElementById("price").value;
 
-        my_cruise.day = day;
-        my_cruise.price = price;
+            my_cruise.day = day;
+            my_cruise.price = price;
 
-        document.getElementById("output").innerHTML = JSON.stringify(my_cruise);
-    }
+            document.getElementById("output").innerHTML = JSON.stringify(my_cruise);
+        }
     </script>
 
 </body>
