--- a/tips.html
+++ b/tips.html
@@ -4,30 +4,42 @@
 <head>
     <title> Tips </title>
 </head>
+<style>
+    body{
+        background-color: azure;
+    }
+</style>
 
 <body>
-    <h1> shows tip amounts</h1>
+    <h1
+        style="color: aqua; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+        Sumanth shows tip amounts</h1>
 
     <h2>Getting input</h2>
-    <form>
-    <label for="value">Enter base amount </label>
-    <input type="number" id="amount" value=50> <br>
+    <div class="container">
+        <div class="col-md-6">
+            <form>
+                <label for="value">Enter base amount </label>
+                <input type="number" id="amount" value=50> <br>
 
-    <label for="value_tip">Enter the tip percent </label>
-    <input type="number" id="tip" value="15"> <br>
-    </form>
+                <label for="value_tip">Enter the tip percent </label>
+                <input type="number" id="tip" value="15"> <br>
+            </form>
 
-    <form>
-        <label for="add">Sum</label>
-        <input type="radio" name="operation" value ="sum" onclick= "chooseOp()"> <br>
-        <label for="diff">Difference</label>
-        <input type="radio" name="operation" value ="difference" onclick= "chooseOp()"> <br>
-        <label for="mul">mult</label>
-        <input type="radio" name="operation" value ="product" onclick= "chooseOp()"> <br>
 
-    </form><br>
+            <form>
+                <label for="add">Sum</label>
+                <input type="radio" name="operation" value="sum" onclick="chooseOp()"> <br>
+                <label for="diff">Difference</label>
+                <input type="radio" name="operation" value="difference" onclick="chooseOp()"> <br>
+                <label for="mul">mult</label>
+                <input type="radio" name="operation" value="product" onclick="chooseOp()"> <br>
 
-    <button type="submit" onclick="tips()">Show tip</button> <br>
+            </form><br>
+
+            <button type="submit" onclick="tips()">Show tip</button> <br>
+        </div>
+    </div>
 
 
 
@@ -47,34 +59,33 @@
                 tipValue = tipValue + i * 4;
                 const tip_cal = (baseValue * (tipValue)) / 100;
                 toShow = toShow + `${tipValue}% is ${tip_cal.toFixed(1)}; `;
-                tipValue=tip2;
+                tipValue = tip2;
 
             }
             document.getElementById("output").innerHTML = toShow;
 
         }
-        function chooseOp()
-        {
+        function chooseOp() {
             let baseValue = parseFloat(document.getElementById("amount").value);
             let tipValue = parseFloat(document.getElementById("tip").value);
             let selectedOperation = document.querySelector('input[name = "operation"]:checked').value;
 
-            let result ="";
+            let result = "";
 
-            switch(selectedOperation){
+            switch (selectedOperation) {
                 case "sum":
                     result = `Sum of ${baseValue} and ${tipValue} is ${baseValue + tipValue}`;
                     break;
                 case "difference":
-                result = `Difference between ${baseValue} and ${tipValue} is ${baseValue - tipValue}`;
+                    result = `Difference between ${baseValue} and ${tipValue} is ${baseValue - tipValue}`;
                     break;
                 case "product":
-                    result = `Product of ${baseValue} and ${tipValue} is ${baseValue*tipValue}`;
+                    result = `Product of ${baseValue} and ${tipValue} is ${baseValue * tipValue}`;
                     break;
                 default:
-                    result = "select appropriate operator";        
+                    result = "select appropriate operator";
             }
-            document.getElementById("result").innerHTML=result;
+            document.getElementById("result").innerHTML = result;
         }
     </script>
 
